syntax = "proto3";
package spielbrett.services.instance_host;
option go_package = "github.com/spielbrett/spielbrett/gen/go/proto/services/instance_host";

import "google/protobuf/any.proto";

message CreateInstanceRequest {
  string instance_type = 1;
  repeated string user_ids = 2;
}

message CreateInstanceResponse {
  string instance_id = 1;
  map<string, string> markup = 2;
}

message PerformActionRequest {
  string instance_id = 1;
  string user_id = 2;
  string action = 3;
}

message PerformActionResponse {
  map<string, string> markup = 1;
}

service InstanceHostService {
  rpc CreateInstance(CreateInstanceRequest) returns (CreateInstanceResponse) {}
  rpc PerformAction(PerformActionRequest) returns (PerformActionResponse) {}
}

